--- a/Elite_Training_Club/Elite_Training_Club/Views/Shared/_Layout.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Countries" asp-action="Index">Países</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Plans" asp-action="Index">Planes</a>
+                        </li>
                     </ul>
                 </div>
             </div>
