--- a/Elite_Training_Club/Elite_Training_Club/Views/Countries/Index.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Countries/Index.cshtml
@@ -19,8 +19,11 @@
                 <table class="table table-hover table-responsive table-striped" id="MyTable">
                     <thead>
                         <tr>
-                            <th>
+                             <th>
                                 @Html.DisplayNameFor(model => model.Name)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.StatesNumber)
                             </th>
                             <th></th>
                         </tr>
@@ -31,6 +34,9 @@
                             <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                               <td>
+                                    @Html.DisplayFor(modelItem => item.StatesNumber)
                                 </td>
                                 <td>
                                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning">Editar</a>
