--- a/Elite_Training_Club/Elite_Training_Club/Views/Plans/Countries/_HeadquarterDetails.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Plans/Countries/_HeadquarterDetails.cshtml
@@ -1,5 +1,5 @@
-﻿@model Elite_Training_Club.Data.Entities.City
-    <h4>Ciudad</h4>
+﻿@model Elite_Training_Club.Data.Entities.Headquarter
+    <h4>Sede</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -8,5 +8,5 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-       
+
     </dl>
