--- a/Elite_Training_Club/Elite_Training_Club/Views/Plans/Countries/Details.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Plans/Countries/Details.cshtml
@@ -1,47 +1,57 @@
-﻿@model IEnumerable<Elite_Training_Club.Data.Entities.Country>
+﻿@model Elite_Training_Club.Data.Entities.Country
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Details";
 }
 
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
 
-<p>
-    <a asp-action="Create" class="btn btn-outline-primary">Crear Nuevo</a>
-</p>
+
+<h1>Detalles</h1>
+
+<div>
+    <partial name="_CountryDetails"/>
+</div>
+<div>
+    <a asp-action="AddState" asp-route-id="@Model?.Id" class=" btn btn-outline-primary"> <i class="fa-solid fa-circle-plus"></i> Agregar Departamento/Estado</a> 
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class=" btn btn-outline-warning"><i class="fa-solid fa-pen-to-square"></i> Editar País</a> 
+    <a asp-action="Index"class=" btn btn-outline-success"><i class="fa-solid fa-arrow-rotate-left"></i> Regresar</a>
+</div>
+<hr />
+
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Países</h3>
+                <h3 class="panel-title">Departamentos/Estados</h3>
             </div>
             <div class="panel-body">
                 <table class="table table-hover table-responsive table-striped" id="MyTable">
                     <thead>
                         <tr>
                              <th>
-                                @Html.DisplayNameFor(model => model.Name)
+                                @Html.DisplayNameFor(model => model.States.FirstOrDefault().Name)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.StatesNumber)
+                                @Html.DisplayNameFor(model => model.States.FirstOrDefault().CitiesNumber)
                             </th>
                             <th></th>
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model)
+                        @foreach (var item in Model.States)
                         {
                             <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Name)
                                 </td>
                                <td>
-                                    @Html.DisplayFor(modelItem => item.StatesNumber)
+                                    @Html.DisplayFor(modelItem => item.CitiesNumber)
                                 </td>
                                 <td>
-                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning">Editar</a>
-                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info">Detalles</a>
-                                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">Borrar</a>
+                                    <a asp-action="EditState" asp-route-id="@item.Id" class="btn btn-outline-warning"><i class="fa-solid fa-pen-to-square"></i></a>
+                                    <a asp-action="DetailsState" asp-route-id="@item.Id" class="btn btn-outline-info"><i class="fa-solid fa-circle-info"></i></a>
+                                    <a asp-action="DeleteState" asp-route-id="@item.Id" class="btn btn-outline-danger"><i class="fa-solid fa-trash"></i></a>
                                 </td>
                             </tr>
                         }
@@ -72,4 +82,3 @@
     });
 </script>
 }
-
