--- a/Elite_Training_Club/Elite_Training_Club/Views/Plans/Countries/DetailsCity.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Plans/Countries/DetailsCity.cshtml
@@ -1,41 +1,53 @@
-﻿@model IEnumerable<Elite_Training_Club.Data.Entities.Plan>
+﻿@model Elite_Training_Club.Data.Entities.City
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Details";
 }
 
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
 
-<p>
-    <a asp-action="Create" class="btn btn-outline-primary">Crear Nuevo</a>
-</p>
+
+<h1>Detalles</h1>
+
+<div>
+    <partial name="_CityDetails"/>
+</div>
+<div>
+    <a asp-action="AddHeadquarter" asp-route-id="@Model?.Id" class=" btn btn-outline-primary"><i class="fa-solid fa-circle-plus"></i> Agregar Sede</a> 
+    <a asp-action="EditCity" asp-route-id="@Model?.Id" class=" btn btn-outline-warning"><i class="fa-solid fa-pen-to-square"></i> Editar Ciudad</a>
+    <a asp-action="DetailsState" asp-route-id="@Model?.State.Id" class=" btn btn-outline-success"><i class="fa-solid fa-arrow-rotate-left"></i> Regresar</a>
+</div>
+<hr />
+
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Planes</h3>
+                <h3 class="panel-title">Sedes</h3>
             </div>
             <div class="panel-body">
                 <table class="table table-hover table-responsive table-striped" id="MyTable">
                     <thead>
                         <tr>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Name)
+                             <th>
+                                @Html.DisplayNameFor(model => model.Headquarters.FirstOrDefault().Name)
                             </th>
+                        
                             <th></th>
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model)
+                        @foreach (var item in Model.Headquarters)
                         {
                             <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Name)
-                                </td>
+                                </td>  
+                               
                                 <td>
-                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning"><i class="fa-solid fa-pen-to-square"></i></a>
-                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info"><i class="fa-solid fa-circle-info"></i></a>
-                                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger"><i class="fa-solid fa-trash"></i></a>                   
+                                    <a asp-action="EditHeadquarter" asp-route-id="@item.Id" class="btn btn-outline-warning"><i class="fa-solid fa-pen-to-square"></i></a>
+                                    <a asp-action="DetailsHeadquarter" asp-route-id="@item.Id" class="btn btn-outline-info"><i class="fa-solid fa-circle-info"></i></a>
+                                    <a asp-action="DeleteHeadquarter" asp-route-id="@item.Id" class="btn btn-outline-danger"><i class="fa-solid fa-trash"></i></a>
                                 </td>
                             </tr>
                         }
@@ -66,4 +78,3 @@
     });
 </script>
 }
-
