--- a/Elite_Training_Club/Elite_Training_Club/Views/Plans/Countries/Index.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Plans/Countries/Index.cshtml
@@ -1,55 +1,53 @@
-﻿@model Elite_Training_Club.Data.Entities.State
+﻿@model IEnumerable<Elite_Training_Club.Data.Entities.Country>
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Index";
 }
 
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
 
-
-<h1>Detalles</h1>
-
-<div>
-    <partial name="_StateDetails"/>
-</div>
-<div>
-    <a asp-action="AddCity" asp-route-id="@Model?.Id" class=" btn btn-outline-primary">Agregar Ciudad</a> 
-    <a asp-action="EditState" asp-route-id="@Model?.Id" class=" btn btn-outline-warning">Editar Departamento/Estado</a> 
-    <a asp-action="Details" asp-route-id="@Model?.Country.Id" class=" btn btn-outline-success">Regresar</a>
-</div>
-<hr />
-
+<p>
+    <a asp-action="Create" class="btn btn-outline-primary"> <i class="fa-solid fa-circle-plus"></i> Crear Nuevo</a>
+</p>
 <div class="row">
+
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Ciudades</h3>
+                <h3 class="panel-title">Países</h3>
             </div>
             <div class="panel-body">
                 <table class="table table-hover table-responsive table-striped" id="MyTable">
                     <thead>
                         <tr>
                              <th>
-                                @Html.DisplayNameFor(model => model.Cities.FirstOrDefault().Name)
+                                @Html.DisplayNameFor(model => model.Name)
                             </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.StatesNumber)
+                            </th>
+
                             <th></th>
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model.Cities)
+                        @foreach (var item in Model)
                         {
                             <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Name)
-                                </td>                            
-                                <td>
-                                    <a asp-action="EditCity" asp-route-id="@item.Id" class="btn btn-outline-warning">Editar</a>
-                                    <a asp-action="DetailsCity" asp-route-id="@item.Id" class="btn btn-outline-info">Detalles</a>
-                                    <a asp-action="DeleteCity" asp-route-id="@item.Id" class="btn btn-outline-danger">Borrar</a>
                                 </td>
-                            </tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.StatesNumber)
+                                </td>
+                                <td>
+                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning"><i class="fa-solid fa-pen-to-square"></i></a>
+                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info"><i class="fa-solid fa-circle-info"></i></a>
+                                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger"><i class="fa-solid fa-trash"></i></a>
+                                </td>
+                           </tr>
                         }
-                    </tbody>
+                       </tbody>
                 </table>
             </div>
         </div>
@@ -76,3 +74,4 @@
     });
 </script>
 }
+
