--- a/Elite_Training_Club/Elite_Training_Club/Views/Home/Error404.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Home/Error404.cshtml
@@ -5,7 +5,7 @@
 
 <br />
 <br />
-<img src="~/images/SiteNotFound.png" />
+<img src="~/images/notfound.png" />
 <h2>Error, página no encontrada</h2>
 
 
