--- a/Elite_Training_Club/Elite_Training_Club/Views/Shared/_Layout.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Countries" asp-action="Index">Países</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Usuarios</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Plans" asp-action="Index">Planes</a>
                             </li>
                         }
