--- a/Elite_Training_Club/Elite_Training_Club/Views/Account/Register.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Account/Register.cshtml
@@ -7,6 +7,12 @@
 <h2>Registrar</h2>
 
 <h4>Usuario</h4>
+<div class="text-success">
+    <h3>
+        @ViewBag.Message
+    </h3>
+</div>
+
 <hr />
 <div class="row">
     <div class="col-md-12">
@@ -50,6 +56,7 @@
         </form>
     </div>
 </div>
+
 
 
 @section Scripts {
