--- a/Elite_Training_Club/Elite_Training_Club/Views/Shared/_Layout.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categorías</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Countries" asp-action="Index">Países</a>
                             </li>
                             <li class="nav-item">
