--- a/Elite_Training_Club/Elite_Training_Club/Views/Users/Index.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Users/Index.cshtml
@@ -91,7 +91,9 @@
                                     @Html.DisplayFor(modelItem => item.EmailConfirmed)
                                 </td>
                                 <td>
+                                    <div class="zoom">
                                     <img src="@item.ImageFullPath" style="width:100px; height:100px; border-radius:50px" />
+                                    <div/>
                                 </td>
                             </tr>
                         }
