--- a/Elite_Training_Club/Elite_Training_Club/wwwroot/css/site.css
+++ b/Elite_Training_Club/Elite_Training_Club/wwwroot/css/site.css
@@ -19,34 +19,7 @@ body {
 
 @charset "utf-8";
 
-.card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 300px;
-    height: 370px;
-    border: 1px solid lightgray;
-    box-shadow: 2px 2px 8px 4px #d3d3d3d1;
-    border-radius: 15px;
-    font-family: sans-serif;
-    margin: 5px;
-}
 
-.card_title {
-    font-size: 24px;
-    padding: 10px 10px 0 10px;
-}
-
-.card_body {
-    padding: 10px;
-}
-
-.card_foot {
-    background: #6699ff;
-    border-radius: 0 0 15px 15px;
-    padding: 10px;
-    text-align: center;
-}
 
 .foot a {
     text-decoration: none;
@@ -63,3 +36,18 @@ body {
         content: ""
     }
 
+/*Zoom images*/
+.zoom {
+    padding: 5px;
+    background-color: transparent;
+    transition: transform .2s;
+    width: auto;
+    height: auto;
+    margin: 0 auto;
+}
+
+ .zoom:hover {
+   -ms-transform: scale(2); /* IE 9 */
+   -webkit-transform: scale(2); /* Safari 3-8 */
+   transform: scale(2);
+ }
