--- a/Elite_Training_Club/Elite_Training_Club/Views/_ViewImports.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Elite_Training_Club
 @using Elite_Training_Club.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Vereyon.Web.FlashMessage
