--- a/Elite_Training_Club/Elite_Training_Club/Views/Account/NotAuthorized.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Account/NotAuthorized.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "NotAuthorized";
 }
-
+<flash dismissable="true" />
 <br />
 <br />
 <img src="~/images/notfound.png" />
