--- a/Elite_Training_Club/Elite_Training_Club/Views/Home/OrderSuccess.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Home/OrderSuccess.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Order Success";
 }
-
+<flash dismissable="true" />
 <div class="row">
     <div class="col-md-4 offset-4">
         <img src="~/images/Shopping.png style="width:400px;"/>
