--- a/Elite_Training_Club/Elite_Training_Club/Views/Account/ResetPassword.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Account/ResetPassword.cshtml
@@ -3,11 +3,13 @@
 @{
     ViewData["Title"] = "Reset Password";
 }
+<flash dismissable="true" />
 
-<h1>Resetea tu Contraseña</h1>
+
 
 <div class="row">
     <div class="col-md-4 offset-md-4">
+        <h1>Resetea tu Contraseña</h1>
         <form method="post">
             <div asp-validation-summary="All"></div>
             <input type="hidden" asp-for="Token" />
