--- a/Elite_Training_Club/Elite_Training_Club/Views/Subscriptions/Delete.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Subscriptions/Delete.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
+<flash dismissable="true" />
 <h1>Borrar</h1>
 
 <h3>Esta seguro que querer borrar?</h3>
