--- a/Elite_Training_Club/Elite_Training_Club/Views/Shared/_Layout.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Shared/_Layout.cshtml
@@ -50,6 +50,13 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Subscriptions" asp-action="Index">Suscripciones</a>
                             </li>
                         }
+                        
+                            @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="MyOrders">Mis Pedidos</a>
+                                </li>
+                            }
                     </ul>
                        <ul class="nav navbar-nav navbar-right">
                      @if (User.Identity.IsAuthenticated)
