--- a/Elite_Training_Club/Elite_Training_Club/Views/Plans/Details.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Plans/Details.cshtml
@@ -10,6 +10,5 @@
     <partial name="_PlanDetails"/>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id" class=" btn btn-outline-warning">Editar</a> 
-    <a asp-action="Index"class=" btn btn-outline-success">Regresar</a>
+    <a asp-action="Index" class="btn btn-outline-success"><i class="fa-solid fa-arrow-rotate-left"></i> Regresar</a>
 </div>
