--- a/Elite_Training_Club/Elite_Training_Club/Views/Countries/AddCity.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Countries/AddCity.cshtml
@@ -1,27 +1,24 @@
 ﻿@model Elite_Training_Club.Models.CityViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Ciudad";
+    Layout = null;
 }
+
 <flash dismissable="true" />
-<h1>Crear</h1>
 
-<h4>Ciudad</h4>
-<hr />
-<div class="row">
-    <div class="col-md-12">
-        <form asp-action="AddCity">
-
+<div class="container smfont">
+    <form asp-action="AddCity" autocomplete="off" asp-route-id="@Model.Id" onsubmit="return jQueryAjaxPost(this);">
+        <div class="box-body">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="StateId" />
             <partial name="_City" />
-
-            <div class="form-group mt-2">
-                <input type="submit" value="Crear" class="btn btn-outline-primary" />
-                 <a asp-action="DetailsState" asp-route-id="@Model.StateId" class="btn btn-outline-success">Regresar </a>
-            </div>
-        </form>
-    </div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-sm btn-primary" data-bs-dismiss="modal"><i class="fa fa-ban"></i> Cancelar</button>
+            <button type="submit" class="btn btn-sm btn-success"><i class="fa fa-save"></i> Guardar</button>
+        </div>
+    </form>
 </div>
 
 @section Scripts {
