--- a/Elite_Training_Club/Elite_Training_Club/Views/Countries/EditHeadquarter.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Countries/EditHeadquarter.cshtml
@@ -1,26 +1,25 @@
 ﻿@model Elite_Training_Club.Models.HeadquarterViewModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Sede";
+    Layout = null;
 }
-<flash dismissable="true" />
-<h1>Editar</h1>
 
-<h4>Sede</h4>
-<hr />
-<div class="row">
-    <div class="col-md-12">
-        <form asp-action="EditHeadquarter">
+<flash dismissable="true" />
+
+<div class="container smfont">
+    <form asp-action="EditHeadquarter" autocomplete="off" asp-route-id="@Model.Id" onsubmit="return jQueryAjaxPost(this);">
+        <div class="box-body">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="CityId" />
-            <partial name="_Headquarter" />
-            <div class="form-group mt-2">
-                <input type="submit" value="Guardar" class="btn btn-outline-primary" />
-                <a asp-action="DetailsCity" asp-route-id="@Model.CityId" class="btn btn-outline-success">Regresar </a>
-            </div>
-        </form>
-    </div>
+            <partial name="_Headquarter"/>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-sm btn-primary" data-bs-dismiss="modal"><i class="fa fa-ban"></i> Cancelar</button>
+            <button type="submit" class="btn btn-sm btn-success"><i class="fa fa-save"></i> Guardar</button>
+        </div>
+    </form>
 </div>
 
 @section Scripts {
