--- a/Elite_Training_Club/Elite_Training_Club/Views/Home/Index.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Home/Index.cshtml
@@ -24,9 +24,9 @@
 <div class="mb-2">
     @foreach (var item in Model.Categories)
     {
-        <span>@item.Name&nbsp;&nbsp;</span>
-    }
+<span> <a href="@Url.Action("Index", "Home", new { searchString = item.Name})" > @item.Name&nbsp;</a></span>    }
 </div>
+<hr/>
 
 
 <div class="mb-2">
